# neural-networks-samples

./: .gitignore  README.md
Basic/: README.md  settings.gradle
Basic/app/: build.gradle
Basic/app/src/main/: AndroidManifest.xml
Basic/app/src/main/cpp/: CMakeLists.txt  nn_sample.cpp  simple_model.cpp  simple_model.h
Basic/app/src/main/res/layout/: activity_main.xml
Basic/gradle/wrapper/: gradle-wrapper.properties
PoseEstimation/: .gitignore  README.md  build.gradle  settings.gradle
PoseEstimation/app/: build.gradle
PoseEstimation/app/src/main/: AndroidManifest.xml
PoseEstimation/app/src/main/assets/shaders/: shader.comp  shader.comp.spv
PoseEstimation/app/src/main/cpp/: CMakeLists.txt  NdkFunctions.cpp  NdkFunctions.h  NdkFunctions.inl  PoseEstimationConfig.h  PoseEstimationDemo_jni.cpp  PoseEstimator.cpp  PoseEstimator.h  Utils.h
PoseEstimation/app/src/main/cpp/ml/: MlExecutorBase.h  NnapiExecutor.cpp  NnapiExecutor.h  NnapiModel.cpp  NnapiUtils.cpp  NnapiUtils.h
PoseEstimation/app/src/main/cpp/renderer/: GlComputeRenderer.cpp  GlComputeRenderer.h  GlUtils.h  RendererBase.h  VulkanComputeRenderer.cpp  VulkanComputeRenderer.h  VulkanUtils.h
PoseEstimation/app/src/main/res/layout/: activity_main.xml  fragment_config.xml  (+1 more)
PoseEstimation/gradle/wrapper/: gradle-wrapper.properties
Sequence/: README.md  settings.gradle
Sequence/app/: build.gradle
Sequence/app/src/main/: AndroidManifest.xml
Sequence/app/src/main/cpp/: CMakeLists.txt  sequence.cpp  sequence_model.cpp  sequence_model.h
Sequence/gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
